# officespace

./: .gitignore  README.md  azure-pipelines.yml  officespace.toml.example  pyproject.toml  requirements.txt  run.py  run.toml.example
.azure-pipelines/: pipeline.yml
docs/: VARIABLES.md
docs/graphql_bundle/: booking_series.graphql  common_desk_booking_settings.graphql  create_booking_series.graphql  current_user_active_and_upcoming_bookings.graphql  current_user_active_bookings.graphql  desk_suggestions.graphql  seat_booking_form_seat_details.graphql  seat_booking_form_settings.graphql  seat_booking_form_site_details.graphql  seat_booking_suggestions.graphql  update_booking_series.graphql  visual_directory_delete_booking_series.graphql  visual_directory_update_booking_series.graphql
officespace/: __init__.py  auth.py  booker.py  cli.py  client.py  config.py  constants.py  helpers.py  logging.py  models.py  output.py  queries.py  tokens.py
officespace/graphql/: create_booking_series.graphql  current_user_linked_employee.graphql  my_bookings.graphql  seat_site.graphql  site_booking_window.graphql
src/officespace/: __init__.py  auth.py  booker.py  client.py  config.py  constants.py
src/officespace/cli/: officespace.py  runner.py
src/officespace/graphql/: models.py  queries.py
src/officespace/utils/: helpers.py  logging.py  qr.py
